--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
-    "@tailwindcss/vite": "^4.0.0",
+    "groq": "^3.71.2",
     "groq-sdk": "^0.12.0",
-    "tailwindcss": "^4.0.0"
-  }
+    "node": "^20.10.0"
+  },
+  "type": "module"
 }
